feat:  insights social card generation (#51) 8a82a48690b806c17c54051128134c6cf84e2c05

--- a/coverage.html
+++ b/coverage.html
@@ -106,6 +106,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/DbInsight.html">src/github/entities/db-insight.entity.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DbInsight</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/10)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/DbUserInsightRepo.html">src/github/entities/db-insight.entity.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DbUserInsightRepo</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/DbReaction.html">src/github/entities/db-reaction.entity.ts</a>
             </td>
             <td>interface</td>
@@ -113,6 +137,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/DbRepo.html">src/github/entities/db-repos.entity.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DbRepo</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/17)</span>
             </td>
         </tr>
         <tr class="low">
@@ -238,10 +274,58 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./controllers/InsightCardController.html">src/social-card/insight-card/insight-card.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>InsightCardController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/InsightCardService.html">src/social-card/insight-card/insight-card.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>InsightCardService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/InsightCardData.html">src/social-card/insight-card/insight-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>InsightCardData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#highlightCardTemplate">src/social-card/templates/highlight-card.template.ts</a>
             </td>
             <td>variable</td>
             <td>highlightCardTemplate</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#insightCardTemplate">src/social-card/templates/insight-card.template.ts</a>
+            </td>
+            <td>variable</td>
+            <td>insightCardTemplate</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
@@ -278,6 +362,42 @@
             </td>
             <td>variable</td>
             <td>cardStyleSetup</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#insightContributors">src/social-card/templates/shared/insight-contributors.ts</a>
+            </td>
+            <td>variable</td>
+            <td>insightContributors</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#insightFooter">src/social-card/templates/shared/insight-footer.ts</a>
+            </td>
+            <td>variable</td>
+            <td>insightFooter</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#insightRepos">src/social-card/templates/shared/insight-repos.ts</a>
+            </td>
+            <td>variable</td>
+            <td>insightRepos</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
