--- a/injectables/InsightCardService.html
+++ b/injectables/InsightCardService.html
@@ -40,7 +40,7 @@
 
 <ol class="breadcrumb">
   <li>Injectables</li>
-  <li >HighlightCardService</li>
+  <li >InsightCardService</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -58,7 +58,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/social-card/highlight-card/highlight-card.service.ts</code>
+            <code>src/social-card/insight-card/insight-card.service.ts</code>
         </p>
 
 
@@ -104,12 +104,12 @@
                             </li>
                             <li>
                                     <span class="modifier">Async</span>
-                                <a href="#getHighlightCard" >getHighlightCard</a>
+                                <a href="#getgetInsightCard" >getgetInsightCard</a>
                             </li>
                             <li>
                                     <span class="modifier">Private</span>
                                     <span class="modifier">Async</span>
-                                <a href="#getHighlightData" >getHighlightData</a>
+                                <a href="#getInsightData" >getInsightData</a>
                             </li>
                         </ul>
                     </td>
@@ -134,7 +134,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:26</a></div>
                             </td>
                         </tr>
 
@@ -223,8 +223,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="123"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:123</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="120"
+                            class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:120</a></div>
                 </td>
             </tr>
 
@@ -287,15 +287,15 @@
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>generateCardBuffer(highlightId: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>, highlightData?: <a href="../interfaces/HighlightCardData.html" target="_self">HighlightCardData</a>)</code>
+                    <code>generateCardBuffer(insightId: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>, insightData?: <a href="../interfaces/InsightCardData.html" target="_self">InsightCardData</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="81"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:81</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="82"
+                            class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:82</a></div>
                 </td>
             </tr>
 
@@ -316,7 +316,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>highlightId</td>
+                                    <td>insightId</td>
                                     <td>
                                                 <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
                                     </td>
@@ -328,9 +328,9 @@
 
                                 </tr>
                                 <tr>
-                                    <td>highlightData</td>
+                                    <td>insightData</td>
                                     <td>
-                                                <code><a href="../interfaces/HighlightCardData.html" target="_self" >HighlightCardData</a></code>
+                                                <code><a href="../interfaces/InsightCardData.html" target="_self" >InsightCardData</a></code>
                                     </td>
 
                                     <td>
@@ -359,26 +359,26 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getHighlightCard"></a>
+                    <a name="getgetInsightCard"></a>
                     <span class="name">
                         <span class="modifier">Async</span>
-                        <span ><b>getHighlightCard</b></span>
-                        <a href="#getHighlightCard"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>getgetInsightCard</b></span>
+                        <a href="#getgetInsightCard"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>getHighlightCard(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <code>getgetInsightCard(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="155"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:155</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="150"
+                            class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:150</a></div>
                 </td>
             </tr>
 
@@ -430,27 +430,27 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getHighlightData"></a>
+                    <a name="getInsightData"></a>
                     <span class="name">
                         <span class="modifier">Private</span>
                         <span class="modifier">Async</span>
-                        <span ><b>getHighlightData</b></span>
-                        <a href="#getHighlightData"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>getInsightData</b></span>
+                        <a href="#getInsightData"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>getHighlightData(highlightId: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <code>getInsightData(insightId: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="42"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:42</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="34"
+                            class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:34</a></div>
                 </td>
             </tr>
 
@@ -471,7 +471,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>highlightId</td>
+                                    <td>insightId</td>
                                     <td>
                                                 <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
                                     </td>
@@ -488,7 +488,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="../interfaces/HighlightCardData.html" target="_self" >Promise&lt;HighlightCardData&gt;</a></code>
+                        <b>Returns : </b>        <code><a href="../interfaces/InsightCardData.html" target="_self" >Promise&lt;InsightCardData&gt;</a></code>
 
                     </div>
                     <div class="io-description">
@@ -524,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/social-card/highlight-card/highlight-card.service.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/social-card/insight-card/insight-card.service.ts:26</a></div>
                         </td>
                     </tr>
 
@@ -540,36 +540,28 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ForbiddenException, Injectable, Logger, NotFoundException } from &quot;@nestjs/common&quot;;
 import { HttpService } from &quot;@nestjs/axios&quot;;
 import { Resvg } from &quot;@resvg/resvg-js&quot;;
-import { Repository, Language } from &quot;@octokit/graphql-schema&quot;;
 import fs from &quot;node:fs/promises&quot;;
-
 import { GithubService } from &quot;../../github/github.service&quot;;
 import { S3FileStorageService } from &quot;../../s3-file-storage/s3-file-storage.service&quot;;
-import userLangs from &quot;../templates/shared/user-langs&quot;;
-import userProfileRepos from &quot;../templates/shared/user-repos&quot;;
+
 import tailwindConfig from &quot;../templates/tailwind.config&quot;;
 import { firstValueFrom } from &quot;rxjs&quot;;
-import highlightCardTemplate from &quot;../templates/highlight-card.template&quot;;
-import { DbUserHighlight } from &quot;../../github/entities/db-user-highlight.entity&quot;;
-import { DbReaction } from &quot;../../github/entities/db-reaction.entity&quot;;
-import { RequiresUpdateMeta } from &quot;../user-card/user-card.service&quot;;
 
-interface HighlightCardData {
-  title: string;
-  body: string;
-  reactions: number;
-  avatarUrl: string;
-  repo: Repository;
-  langTotal: number;
-  langs: (Language &amp; {
-    size: number;
-  })[];
+import { RequiresUpdateMeta } from &quot;../user-card/user-card.service&quot;;
+import { DbInsight } from &quot;../../github/entities/db-insight.entity&quot;;
+import insightCardTemplate from &quot;../templates/insight-card.template&quot;;
+import insightRepos from &quot;../templates/shared/insight-repos&quot;;
+import insightContributors from &quot;../templates/shared/insight-contributors&quot;;
+
+interface InsightCardData {
+  pageName: string;
+  repos: { repoName: string; avatarUrl: string }[];
+  contributors: string[];
   updated_at: Date;
-  url: string;
 }
 
 @Injectable()
-export class HighlightCardService {
+export class InsightCardService {
   private readonly logger &#x3D; new Logger(this.constructor.name);
 
   constructor (
@@ -578,56 +570,61 @@ export class HighlightCardService {
     private readonly s3FileStorageService: S3FileStorageService,
   ) {}
 
-  private async getHighlightData (highlightId: number): Promise&lt;HighlightCardData&gt; {
-    const highlightReq &#x3D; await firstValueFrom(
-      this.httpService.get&lt;DbUserHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;),
+  private async getInsightData (insightId: number): Promise&lt;InsightCardData&gt; {
+    const maxRepoQueryIdsLenght &#x3D; 10;
+
+    const insightPageReq &#x3D; await firstValueFrom(
+      this.httpService.get&lt;DbInsight&gt;(&#x60;https://api.opensauced.pizza/v1/insights/${insightId}&#x60;),
     );
-    const { login, title, highlight: body, updated_at, url } &#x3D; highlightReq.data;
 
-    const reactionsReq &#x3D; await firstValueFrom(
-      this.httpService.get&lt;DbReaction[]&gt;(&#x60;https://api.opensauced.pizza/v1/highlights/${highlightId}/reactions&#x60;),
+    const { repos, name, updated_at } &#x3D; insightPageReq.data;
+
+    const query &#x3D; (new URLSearchParams);
+
+    query.set(
+      &quot;repoIds&quot;,
+      repos
+        .slice(0, maxRepoQueryIdsLenght)
+        .map(repo &#x3D;&gt; repo.repo_id)
+        .join(&quot;,&quot;),
     );
-    const reactions &#x3D; reactionsReq.data.reduce&lt;number&gt;((acc, curr) &#x3D;&gt; acc + Number(curr.reaction_count), 0);
 
-    const [owner, repoName] &#x3D; url.replace(&quot;https://github.com/&quot;, &quot;&quot;).split(&quot;/&quot;);
+    const contributorsReq &#x3D; await firstValueFrom(
+      this.httpService.get&lt;{ data: { author_login: string }[] }&gt;(
+        &#x60;https://api.opensauced.pizza/v1/contributors/search?${String(query)}&#x60;,
+      ),
+    );
 
-    const user &#x3D; await this.githubService.getUser(login);
-    const repo &#x3D; await this.githubService.getRepo(owner, repoName);
+    const contributorsRes &#x3D; contributorsReq.data.data;
+    const contributors &#x3D; contributorsRes.map(
+      ({ author_login }) &#x3D;&gt; &#x60;https://www.github.com/${author_login}.png?size&#x3D;50&#x60;,
+    );
 
-    const langList &#x3D; repo.languages?.edges?.flatMap(edge &#x3D;&gt; {
-      if (edge) {
-        return {
-          ...edge.node,
-          size: edge.size,
-        };
-      }
-    }) as (Language &amp; { size: number })[];
+    const repositories &#x3D; repos.map(repo &#x3D;&gt; {
+      const [owner, repoName] &#x3D; repo.full_name.split(&quot;/&quot;);
+
+      return {
+        repoName,
+        avatarUrl: &#x60;https://www.github.com/${owner}.png?size&#x3D;50&#x60;,
+      };
+    });
 
     return {
-      title,
-      body,
-      reactions,
-      avatarUrl: &#x60;${String(user.avatarUrl)}&amp;size&#x3D;150&#x60;,
-      langs: langList,
-      langTotal: repo.languages?.totalSize ?? 0,
-      repo,
+      pageName: name,
+      repos: repositories,
+      contributors,
       updated_at: new Date(updated_at),
-      url,
     };
   }
 
   // public only to be used in local scripts. Not for controller direct use.
-  async generateCardBuffer (highlightId: number, highlightData?: HighlightCardData) {
+  async generateCardBuffer (insightId: number, insightData?: InsightCardData) {
     const { html } &#x3D; await import(&quot;satori-html&quot;);
     const satori &#x3D; (await import(&quot;satori&quot;)).default;
 
-    const { title, body, reactions, avatarUrl, repo, langs, langTotal } &#x3D; highlightData
-      ? highlightData
-      : await this.getHighlightData(highlightId);
+    const { pageName, repos, contributors } &#x3D; insightData ? insightData : await this.getInsightData(insightId);
 
-    const template &#x3D; html(
-      highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos([repo], 2), reactions),
-    );
+    const template &#x3D; html(insightCardTemplate(pageName, insightContributors(contributors), insightRepos(repos, 2)));
 
     const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
     const interArrayBufferMedium &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-500-normal.woff&quot;);
@@ -660,7 +657,7 @@ export class HighlightCardService {
   }
 
   async checkRequiresUpdate (id: number): Promise&lt;RequiresUpdateMeta&gt; {
-    const hash &#x3D; &#x60;highlights/${String(id)}.png&#x60;;
+    const hash &#x3D; &#x60;insights/${String(id)}.png&#x60;;
     const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
     const hasFile &#x3D; await this.s3FileStorageService.fileExists(hash);
 
@@ -676,11 +673,9 @@ export class HighlightCardService {
 
       returnVal.lastModified &#x3D; lastModified;
 
-      const { updated_at, reactions } &#x3D; await this.getHighlightData(id);
-      const metadata &#x3D; await this.s3FileStorageService.getFileMeta(hash);
-      const savedReactions &#x3D; metadata?.[&quot;reactions-count&quot;] ?? &quot;0&quot;;
+      const { updated_at } &#x3D; await this.getInsightData(id);
 
-      if (lastModified &amp;&amp; lastModified &gt; updated_at &amp;&amp; savedReactions &#x3D;&#x3D;&#x3D; String(reactions)) {
+      if (lastModified &amp;&amp; lastModified &gt; updated_at) {
         this.logger.debug(
           &#x60;Highlight ${id} exists in S3 with lastModified: ${lastModified.toISOString()} newer than updated_at: ${updated_at.toISOString()}, and reaction count is the same, redirecting to ${fileUrl}&#x60;,
         );
@@ -691,28 +686,28 @@ export class HighlightCardService {
     return returnVal;
   }
 
-  async getHighlightCard (id: number): Promise&lt;string&gt; {
+  async getgetInsightCard (id: number): Promise&lt;string&gt; {
     const { remaining } &#x3D; await this.githubService.rateLimit();
 
     if (remaining &lt; 1000) {
       throw new ForbiddenException(&quot;Rate limit exceeded&quot;);
     }
 
-    const highlightData &#x3D; await this.getHighlightData(id);
+    const insightData &#x3D; await this.getInsightData(id);
 
     try {
-      const hash &#x3D; &#x60;highlights/${String(id)}.png&#x60;;
+      const hash &#x3D; &#x60;insights/${String(id)}.png&#x60;;
       const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
 
-      const { png } &#x3D; await this.generateCardBuffer(id, highlightData);
+      const { png } &#x3D; await this.generateCardBuffer(id, insightData);
 
-      await this.s3FileStorageService.uploadFile(png, hash, &quot;image/png&quot;, { &quot;reactions-count&quot;: String(highlightData.reactions) });
+      await this.s3FileStorageService.uploadFile(png, hash, &quot;image/png&quot;);
 
-      this.logger.debug(&#x60;Highlight ${id} did not exist in S3, generated image and uploaded to S3, redirecting&#x60;);
+      this.logger.debug(&#x60;Insight ${id} did not exist in S3, generated image and uploaded to S3, redirecting&#x60;);
 
       return fileUrl;
     } catch (e) {
-      this.logger.error(&#x60;Error generating highlight card for ${id}&#x60;, e);
+      this.logger.error(&#x60;Error generating insight card for ${id}&#x60;, e);
 
       throw (new NotFoundException);
     }
@@ -761,7 +756,7 @@ export class HighlightCardService {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'injectable';
-            var COMPODOC_CURRENT_PAGE_URL = 'HighlightCardService.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'InsightCardService.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
