--- a/interfaces/DbUserInsightRepo.html
+++ b/interfaces/DbUserInsightRepo.html
@@ -47,7 +47,7 @@
   <li>Interfaces</li>
   <li
   >
-  RequiresUpdateMeta</li>
+  DbUserInsightRepo</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -65,7 +65,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/social-card/user-card/user-card.service.ts</code>
+            <code>src/github/entities/db-insight.entity.ts</code>
         </p>
 
 
@@ -84,27 +84,34 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#fileUrl" 
+                                            <span class="modifier">Optional</span>
+                                        <a href="#created_at" 
 >
-                                            fileUrl
+                                            created_at
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#hasFile" 
+                                        <a href="#full_name" 
 >
-                                            hasFile
+                                            full_name
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#lastModified" 
+                                        <a href="#id" 
 >
-                                            lastModified
+                                            id
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#needsUpdate" 
+                                        <a href="#insight_id" 
 >
-                                            needsUpdate
+                                            insight_id
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="#repo_id" 
+>
+                                            repo_id
                                         </a>
                                 </li>
                             </ul>
@@ -122,9 +129,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="fileUrl"></a>
-                                        <span class="name "><b>fileUrl</b>
-                                            <a href="#fileUrl">
+                                        <a name="created_at"></a>
+                                        <span class="name "><b>created_at</b>
+                                            <a href="#created_at">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -132,7 +139,45 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>fileUrl:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>created_at:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="full_name"></a>
+                                        <span class="name "><b>full_name</b>
+                                            <a href="#full_name">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>full_name:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -155,9 +200,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="hasFile"></a>
-                                        <span class="name "><b>hasFile</b>
-                                            <a href="#hasFile">
+                                        <a name="id"></a>
+                                        <span class="name "><b>id</b>
+                                            <a href="#id">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -165,7 +210,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>hasFile:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                        <code>id:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -173,7 +218,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 
                                         </td>
                                     </tr>
@@ -188,9 +233,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="lastModified"></a>
-                                        <span class="name "><b>lastModified</b>
-                                            <a href="#lastModified">
+                                        <a name="insight_id"></a>
+                                        <span class="name "><b>insight_id</b>
+                                            <a href="#insight_id">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -198,7 +243,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>lastModified:     <code>Date | null</code>
+                                        <code>insight_id:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -206,7 +251,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>Date | null</code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 
                                         </td>
                                     </tr>
@@ -221,9 +266,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="needsUpdate"></a>
-                                        <span class="name "><b>needsUpdate</b>
-                                            <a href="#needsUpdate">
+                                        <a name="repo_id"></a>
+                                        <span class="name "><b>repo_id</b>
+                                            <a href="#repo_id">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -231,7 +276,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>needsUpdate:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                        <code>repo_id:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -239,7 +284,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
 
                                         </td>
                                     </tr>
@@ -255,190 +300,24 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ForbiddenException, Injectable, Logger, NotFoundException } from &quot;@nestjs/common&quot;;
-import { HttpService } from &quot;@nestjs/axios&quot;;
-import { Resvg } from &quot;@resvg/resvg-js&quot;;
-import { Repository, Language, User } from &quot;@octokit/graphql-schema&quot;;
-import fs from &quot;node:fs/promises&quot;;
-
-import { GithubService } from &quot;../../github/github.service&quot;;
-import { S3FileStorageService } from &quot;../../s3-file-storage/s3-file-storage.service&quot;;
-import userLangs from &quot;../templates/shared/user-langs&quot;;
-import userProfileRepos from &quot;../templates/shared/user-repos&quot;;
-import userProfileCardTemplate from &quot;../templates/user-profile-card.template&quot;;
-import tailwindConfig from &quot;../templates/tailwind.config&quot;;
-
-export interface UserCardData {
-  id: User[&quot;databaseId&quot;];
-  name: User[&quot;name&quot;];
-  langs: (Language &amp; {
-    size: number;
-  })[];
-  langTotal: number;
-  repos: Repository[];
-  avatarUrl: string;
-  formattedName: string;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface DbInsight {
+  id: number;
+  user_id: number;
+  name: string;
+  is_public: boolean;
+  is_favorite: boolean;
+  short_code: string;
+  created_at: string;
+  updated_at: string;
+  repos: DbUserInsightRepo[];
 }
 
-export interface RequiresUpdateMeta {
-  fileUrl: string;
-  hasFile: boolean;
-  needsUpdate: boolean;
-  lastModified: Date | null;
-}
-
-@Injectable()
-export class UserCardService {
-  private readonly logger &#x3D; new Logger(this.constructor.name);
-
-  constructor (
-    private readonly httpService: HttpService,
-    private readonly githubService: GithubService,
-    private readonly s3FileStorageService: S3FileStorageService,
-  ) {}
-
-  private async getUserData (username: string): Promise&lt;UserCardData&gt; {
-    const langs: Record&lt;
-    string,
-    Language &amp; {
-      size: number;
-    }
-    &gt; &#x3D; {};
-    const today &#x3D; (new Date);
-    const today30daysAgo &#x3D; new Date((new Date).setDate(today.getDate() - 30));
-    const user &#x3D; await this.githubService.getUser(username);
-    const langRepos &#x3D; user.repositories.nodes?.filter(
-      repo &#x3D;&gt; new Date(String(repo?.pushedAt)) &gt; today30daysAgo,
-    ) as Repository[];
-    let langTotal &#x3D; 0;
-
-    langRepos.map(repo &#x3D;&gt; {
-      repo.languages?.edges?.map(edge &#x3D;&gt; {
-        if (edge?.node.id) {
-          langTotal +&#x3D; edge.size;
-
-          if (!Object.keys(langs).includes(edge.node.id)) {
-            langs[edge.node.id] &#x3D; {
-              ...edge.node,
-              size: edge.size,
-            };
-          } else {
-            langs[edge.node.id].size +&#x3D; edge.size;
-          }
-        }
-      });
-    });
-
-    return {
-      id: user.databaseId,
-      name: user.name,
-      langs: Array.from(Object.values(langs)).sort((a, b) &#x3D;&gt; b.size - a.size),
-      langTotal,
-      repos: user.topRepositories.nodes?.filter(
-        repo &#x3D;&gt; !repo?.isPrivate &amp;&amp; repo?.owner.login !&#x3D;&#x3D; username,
-      ) as Repository[],
-      avatarUrl: &#x60;${String(user.avatarUrl)}&amp;size&#x3D;150&#x60;,
-      formattedName: user.login,
-    };
-  }
-
-  // public only to be used in local scripts. Not for controller direct use.
-  async generateCardBuffer (username: string, userData?: UserCardData) {
-    const { html } &#x3D; await import(&quot;satori-html&quot;);
-    const satori &#x3D; (await import(&quot;satori&quot;)).default;
-
-    const { avatarUrl, repos, langs, langTotal, formattedName } &#x3D; userData
-      ? userData
-      : await this.getUserData(username);
-
-    const template &#x3D; html(
-      userProfileCardTemplate(avatarUrl, formattedName, userLangs(langs, langTotal), userProfileRepos(repos, 3)),
-    );
-
-    const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
-    const interArrayBufferMedium &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-500-normal.woff&quot;);
-
-    const svg &#x3D; await satori(template, {
-      width: 1200,
-      height: 627,
-      fonts: [
-        {
-          name: &quot;Inter&quot;,
-          data: interArrayBuffer,
-          weight: 400,
-          style: &quot;normal&quot;,
-        },
-        {
-          name: &quot;Inter&quot;,
-          data: interArrayBufferMedium,
-          weight: 500,
-          style: &quot;normal&quot;,
-        },
-      ],
-      tailwindConfig,
-    });
-
-    const resvg &#x3D; new Resvg(svg, { background: &quot;rgba(238, 235, 230, .9)&quot; });
-
-    const pngData &#x3D; resvg.render();
-
-    return { png: pngData.asPng(), svg };
-  }
-
-  async checkRequiresUpdate (username: string): Promise&lt;RequiresUpdateMeta&gt; {
-    const hash &#x3D; &#x60;users/${String(username)}.png&#x60;;
-    const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
-    const hasFile &#x3D; await this.s3FileStorageService.fileExists(hash);
-    const today3daysAgo &#x3D; new Date((new Date).setDate((new Date).getDate() - 3));
-    const returnVal: RequiresUpdateMeta &#x3D; {
-      fileUrl,
-      hasFile,
-      needsUpdate: true,
-      lastModified: null,
-    };
-
-    if (hasFile) {
-      const lastModified &#x3D; await this.s3FileStorageService.getFileLastModified(hash);
-
-      returnVal.lastModified &#x3D; lastModified;
-
-      if (lastModified &amp;&amp; lastModified &gt; today3daysAgo) {
-        this.logger.debug(
-          &#x60;User ${username} exists in S3 with lastModified: ${lastModified.toISOString()} less than 3 days ago, redirecting to ${fileUrl}&#x60;,
-        );
-        returnVal.needsUpdate &#x3D; false;
-      }
-    }
-
-    return returnVal;
-  }
-
-  async getUserCard (username: string): Promise&lt;string&gt; {
-    const { remaining } &#x3D; await this.githubService.rateLimit();
-
-    if (remaining &lt; 1000) {
-      throw new ForbiddenException(&quot;Rate limit exceeded&quot;);
-    }
-
-    const userData &#x3D; await this.getUserData(username);
-
-    try {
-      const hash &#x3D; &#x60;users/${String(username)}.png&#x60;;
-      const fileUrl &#x3D; &#x60;${this.s3FileStorageService.getCdnEndpoint()}${hash}&#x60;;
-
-      const { png } &#x3D; await this.generateCardBuffer(username, userData);
-
-      await this.s3FileStorageService.uploadFile(png, hash, &quot;image/png&quot;, { &quot;x-amz-meta-user-id&quot;: String(userData.id) });
-
-      this.logger.debug(&#x60;User ${username} did not exist in S3, generated image and uploaded to S3, redirecting&#x60;);
-
-      return fileUrl;
-    } catch (e) {
-      this.logger.error(&#x60;Error generating user card for ${username}&#x60;, e);
-
-      throw (new NotFoundException);
-    }
-  }
+interface DbUserInsightRepo {
+  readonly id: number;
+  readonly insight_id: number;
+  readonly repo_id: number;
+  readonly full_name: string;
+  readonly created_at?: string;
 }
 </code></pre>
     </div>
@@ -477,7 +356,7 @@ export class UserCardService {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'RequiresUpdateMeta.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'DbUserInsightRepo.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
